[package]
name = "tf2internal"
version = "0.1.0"
authors = ["dank <git@dank.anonaddy.com>"]
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

# Make sure your running latest stable / nightly, this was just stabalized last week!
[profile.release]
strip = "symbols"
lto = true

[dependencies]
log = "0.4"
flexi_logger = "0.22.0"
anyhow = "1.0"
thiserror = "1.0"
once_cell = "1.9"
detour = { git = "https://github.com/darfink/detour-rs" }

# Official windows api, also note how we have feature gates
[dependencies.windows]
version = "0.29.0"
features = [
    "Win32_Foundation",
    "Win32_System_WindowsProgramming",
    "Win32_System_Memory",
    "Win32_System_LibraryLoader",
    "Win32_System_Console",
    "Win32_System_Threading",
    "Win32_System_SystemServices",
    "Win32_System_Diagnostics_Debug",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Security",
]
